2003-03-07  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed typo.

2003-03-06  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug that unreadable/missing files are not
	  removed from the list of files to be printed.

2003-03-05  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug of settings for composite options
	  stuffed into the PostScript job data by applications (as
	  OpenOffice.org) being ignored; added support for
	  "FoomaticRIPDefault..." keywords in numerical options (see
  http://www.linuxprinting.org/pipermail/foomatic-devel/2003q1/001250.html).

2003-02-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Introduced mode for the spooler CPS (Coherent
	  Printing System).

2003-02-13  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug in reading a custom page size from
	  the PostScript input file.

2003-02-03  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.0beta1. 
	  Tag name: "foomatic-filters-3_0_0beta1".

	* README, USAGE: Updated for version 3.0.0beta1.

	* COPYING: Added file containing the GPL.

2002-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.1. 
	  Tag name: "foomatic-filters-2_9_1".

	* README, USAGE: Updated for version 2.9.1.

2002-12-09  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Introduced support for composite options.

2002-12-08  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-gswrapper.in: If there is no /dev/fd/3, don't use
	  /dev/fd/3 for standard output. Use the good old "| cat >&3".

2002-12-04  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.0. 
	  Tag name: "foomatic-filters-2_9_0".
	
2002-12-01  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-gswrapper.in: If there is no /dev/fd/0, don't use